[package]
authors = ["Aleksei Voronov <despawn@gmail.com>"]
description = "Restore correct letter casings in arbitrary text using a statistical model"
documentation = "https://docs.rs/truecase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/despawnerer/truecase"
name = "truecase"
version = "0.2.0"
readme = "README.md"
exclude = ["testing-data/*"]
edition = "2018"

[[bench]]
harness = false
name = "all"

[dependencies]
clap = "2.33"
lazy_static = "1.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.7"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.3"
